--- a/src/public/.htaccess
+++ b/src/public/.htaccess
@@ -18,4 +18,6 @@
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
+
+    SetEnvIf X-Forwarded-Proto https HTTPS=on
 </IfModule>
