--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,5 +19,7 @@ services:
     container_name: container_app
     volumes:
        - ./src:/var/www/src
-
-
+  redis:
+    image: redis:latest
+    ports:
+    - 6379:6379
