--- a/infra/ec2.yml
+++ b/infra/ec2.yml
@@ -119,7 +119,6 @@ Resources:
             Values:
               - "ihihihihih123456.com"
               - "www.ihihihihih123456.com"
-              - "test.ihihihihih123456.com"
 
   Ec2SecurityGroup:
     Type: AWS::EC2::SecurityGroup
@@ -174,7 +173,7 @@ Resources:
   #    ImageId: ami-08ce76bae392de7dc
   #    InstanceInitiatedShutdownBehavior: stop
   #    InstanceType: t3.nano
-  #    KeyName: !Ref KeyPair
+  #    #KeyName: !Ref KeyPair
   #    Monitoring: false
   #    SecurityGroupIds: 
   #      - !Ref Ec2SecurityGroup
