--- a/infra/redis.yml
+++ b/infra/redis.yml
@@ -1,5 +1,5 @@
 AWSTemplateFormatVersion: 2010-09-09
-Description: ACM
+Description: Redis
 
 Parameters:
   EnvName:
@@ -7,58 +7,57 @@ Parameters:
     Default: prod
 
 Resources:
+  RedisSecurityGroup:
+    Type: AWS::EC2::SecurityGroup
+    Properties:
+      GroupDescription: Redis access
+      VpcId:
+        Fn::ImportValue: !Sub "${EnvName}-VPC-Output"
+      SecurityGroupIngress:
+        - IpProtocol: tcp
+          FromPort: 6379
+          ToPort: 6379
+          CidrIp: 10.0.20.0/24
+        - IpProtocol: tcp
+          FromPort: 6379
+          ToPort: 6379
+          CidrIp: 10.0.21.0/24
+      Tags:
+        - Key: Name
+          Value: !Sub ${EnvName}-Redis-SecurityGroup
+
+  WEBRedisSubNetGroup:
+    Type: AWS::ElastiCache::SubnetGroup
+    Properties:
+      CacheSubnetGroupName: web-cache-subnet-group
+      Description: web-cache
+      SubnetIds:
+        - Fn::ImportValue: !Sub "${EnvName}-PrivateSubnet1a-Output"
+        - Fn::ImportValue: !Sub "${EnvName}-PrivateSubnet1c-Output"
+
   WEBRedis:
     Type: AWS::ElastiCache::ReplicationGroup
     Properties:
-      AZMode: cross-az
-      NumCacheNodes: 1
-      Port: 6379
-      Tags:
-        - Key: Name
-          Value: !Sub ${EnvName}-WEBRedis
-      TransitEncryptionEnabled: true
-
+      ReplicationGroupId: !Sub ${EnvName}-WEB-Redis
       AtRestEncryptionEnabled: true
-      AuthToken: ABCDEFGHIJKLMNOPQRSTUVWXYZ
+      #AuthToken: ABCDEFGHIJKLMNOPQRSTUVWXYZ
       AutomaticFailoverEnabled: true
       AutoMinorVersionUpgrade: false
       CacheNodeType: cache.t4g.micro
-      #CacheSubnetGroupName: String
-      ClusterMode:
-        Enabled: false
+      CacheSubnetGroupName: !Ref WEBRedisSubNetGroup
+      ClusterMode: disabled
       Engine: redis
       EngineVersion: 7.1
-  GlobalReplicationGroupId: String
-  IpDiscovery: String
-  KmsKeyId: String
-  LogDeliveryConfigurations: 
-    - LogDeliveryConfigurationRequest
-  MultiAZEnabled: Boolean
-  NetworkType: String
-  NodeGroupConfiguration: 
-    - NodeGroupConfiguration
-  NotificationTopicArn: String
-  NumCacheClusters: Integer
-  NumNodeGroups: Integer
-  Port: Integer
-  PreferredCacheClusterAZs: 
-    - String
-  PreferredMaintenanceWindow: String
-  PrimaryClusterId: String
-  ReplicasPerNodeGroup: Integer
-  ReplicationGroupDescription: String
-  ReplicationGroupId: String
-  SecurityGroupIds: 
-    - String
-  SnapshotArns: 
-    - String
-  SnapshotName: String
-  SnapshotRetentionLimit: Integer
-  SnapshottingClusterId: String
-  SnapshotWindow: String
-  Tags: 
-    - Tag
-  TransitEncryptionEnabled: Boolean
-  TransitEncryptionMode: String
-  UserGroupIds: 
-    - String
+      IpDiscovery: ipv4
+      MultiAZEnabled: true
+      NetworkType: ipv4
+      NumCacheClusters: 2
+      Port: 6379
+      ReplicationGroupDescription: web-cache-group
+      SecurityGroupIds: 
+        - !Ref RedisSecurityGroup
+      Tags:
+        - Key: Name
+          Value: !Sub ${EnvName}-WEB-Redis
+      TransitEncryptionEnabled: true
+      TransitEncryptionMode: required
