--- a/infra/cloudfront.yml
+++ b/infra/cloudfront.yml
@@ -7,24 +7,23 @@ Parameters:
     Default: prod
 
 Resources:
-  WebCloudFrontCachePolicy:
-    Type: AWS::CloudFront::CachePolicy
-    Properties:
-      CachePolicyConfig: 
-        DefaultTTL: 0
-        MaxTTL: 0
-        MinTTL: 0
-        Name: !Sub ${prod}-CachePolicy
-        ParametersInCacheKeyAndForwardedToOrigin: 
-          EnableAcceptEncodingBrotli: Boolean
-          EnableAcceptEncodingGzip: Boolean
-          CookiesConfig: 
-            CookieBehavior: none
-          HeadersConfig: 
-            HeadersConfig
-          QueryStringsConfig: 
-            QueryStringsConfig
-
+  #WebCloudFrontCachePolicy:
+  #  Type: AWS::CloudFront::CachePolicy
+  #  Properties:
+  #    CachePolicyConfig: 
+  #      DefaultTTL: 0
+  #      MaxTTL: 0
+  #      MinTTL: 0
+  #      Name: !Sub ${prod}-CachePolicy
+  #      ParametersInCacheKeyAndForwardedToOrigin: 
+  #        EnableAcceptEncodingBrotli: Boolean
+  #        EnableAcceptEncodingGzip: Boolean
+  #        CookiesConfig: 
+  #          CookieBehavior: none
+  #        HeadersConfig: 
+  #          HeadersConfig
+  #        QueryStringsConfig: 
+  #          QueryStringsConfig
 
   WEBCloudFront:
     Type: AWS::CloudFront::Distribution
@@ -33,6 +32,22 @@ Resources:
         Aliases: 
           - "ihihihihih123456.com"
           - "www.ihihihihih123456.com"
+        Enabled: true
+        IPV6Enabled: true
+        Origins: 
+          - CustomOriginConfig: 
+              OriginProtocolPolicy: https-only
+              OriginReadTimeout: 60
+              OriginSSLProtocols:
+                - TLSv1.2
+            DomainName: Fn::ImportValue: ALBDNSNameExport
+            Id: ALBOrigin
+            #OriginAccessControlId: String
+            OriginShield: 
+              Enabled: true
+              OriginShieldRegion: ap-northeast-1
+            #S3OriginConfig: 
+            #  S3OriginConfig
         DefaultCacheBehavior: 
           AllowedMethods: 
             - GET
@@ -44,53 +59,19 @@ Resources:
             - DELETE
           CachePolicyId: 4135ea2d-6df8-44a3-9df3-4b5a84be39ad
           Compress: false
-  FieldLevelEncryptionId: String
-  ForwardedValues: 
-    ForwardedValues
-  FunctionAssociations: 
-    - FunctionAssociation
-  LambdaFunctionAssociations: 
-    - LambdaFunctionAssociation
-  OriginRequestPolicyId: String
-  RealtimeLogConfigArn: String
-  ResponseHeadersPolicyId: String
-  SmoothStreaming: Boolean
-  TargetOriginId: String
-  TrustedKeyGroups: 
-    - String
-  TrustedSigners: 
-    - String
-  ViewerProtocolPolicy: String
-
-        CacheBehaviors: 
-         - CacheBehavior
-        CNAMEs: 
-          - String
-        Comment: String
-        ContinuousDeploymentPolicyId: String
-        CustomErrorResponses: 
-          - CustomErrorResponse
-        CustomOrigin: 
-          LegacyCustomOrigin
-        DefaultRootObject: String
-        Enabled: Boolean
-        HttpVersion: String
-        IPV6Enabled: Boolean
-        Logging: 
-          Logging
-        OriginGroups: 
-          OriginGroups
-        Origins: 
-          - Origin
-        PriceClass: String
-        Restrictions: 
-          Restrictions
-        S3Origin: 
-          LegacyS3Origin
-        Staging: Boolean
+          #OriginRequestPolicyId: String
+          #ResponseHeadersPolicyId: String
+          TargetOriginId: ALBOrigin
+          #TrustedKeyGroups: 
+          #  - String
+          ViewerProtocolPolicy: https-only
+        #CacheBehaviors: 
+        # - CacheBehavior
+        HttpVersion: http2and3
+        PriceClass: PriceClass_200
         ViewerCertificate: 
           ViewerCertificate
-        WebACLId: String
+        #WebACLId: String
       Tags: 
         - Key: Name
           Value: !Sub ${EnvName}-Distribution
