--- a/infra/ec2.yml
+++ b/infra/ec2.yml
@@ -205,3 +205,7 @@ Outputs:
     Value: !GetAtt ALB.CanonicalHostedZoneID
     Export:
       Name: ALBHostedZoneIdExport
+  ALBId:
+    Value: !Ref ALB
+    Export:
+      Name: ALBIdExport
