--- a/infra/route53Recordset.yml
+++ b/infra/route53Recordset.yml
@@ -16,9 +16,9 @@ Resources:
       Type: A
       AliasTarget: 
         DNSName:
-          Fn::ImportValue: ALBDNSNameExport
-        HostedZoneId:
-          Fn::ImportValue: ALBHostedZoneIdExport
+          Fn::ImportValue: CloudFrontDNSNameExport
+        HostedZoneId: Z2FDTNDATAQYW2
+        #  Fn::ImportValue: CloudFrontHostedZoneIdExport
 
   RecordSet2:
     Type: AWS::Route53::RecordSet
@@ -29,7 +29,6 @@ Resources:
       Type: A
       AliasTarget: 
         DNSName:
-          Fn::ImportValue: ALBDNSNameExport
-        HostedZoneId:
-          Fn::ImportValue: ALBHostedZoneIdExport
-
+          Fn::ImportValue: CloudFrontDNSNameExport
+        HostedZoneId: Z2FDTNDATAQYW2
+        #  Fn::ImportValue: CloudFrontHostedZoneIdExport
